<resources>
    <string name="app_name">eDive</string>
    <string name="verify_second">秒后重新发送</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="loading">加载中</string>
    <string name="login_phone_emil">请输入手机号/邮箱</string>
    <string name="login_pass">密码登录</string>
    <string name="login">登录</string>
    <string name="login_ed_pass">输入密码（6-12位）</string>
    <string name="login_register_name">注册账号</string>
    <string name="login_forget_pass">忘记密码</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_getcode">获取验证码</string>
    <string name="register_phone_emil">请输入手机号/邮箱</string>
    <string name="register_ed_invite_code">请输入邀请码</string>
    <string name="register_btn">注册</string>
    <string name="register_user_agreement">点击注册即默认同意《用户注册协议》</string>
    <string name="findpass_ed_code">输入验证码</string>
    <string name="findpass_ed_new_pass">请输入新密码</string>
    <string name="findpass_ok_new_pass">确认新密码</string>
    <string name="et_phone">请输入手机号/邮箱</string>
    <string name="et_password">请输入密码</string>
    <string name="Verification">验证码登陆</string>
    <string name="Register">注册账号</string>
    <string name="FindPassword">忘记密码</string>
    <string name="QuickLogin">快捷登陆</string>
    <string name="et_Verification">请输入验证码</string>
    <string name="et_obtaitVerification">获取验证码</string>
    <string name="passwordLogin">密码登陆</string>
    <string name="unameLogin">账号密码登陆</string>
    <string name="wechatLogin">微信登陆</string>
    <string name="Setting">设置</string>
    <string name="ok">确认</string>
    <string name="et_invitationcode">输入邀请码</string>
    <string name="update_password_title">修改密码</string>
    <string name="update_et_former_password">请输入旧密码</string>
    <string name="update_et_new_password">请输入新密码</string>
    <string name="update_ok_new_pass">确认新密码</string>
    <string name="update_ok_btn">确认修改</string>
    <string name="update_paypassword_title">修改支付密码</string>
    <string name="updatepay_ed_phone">请输入手机号</string>
    <string name="updatepay_et_ok_new_pass">确认新密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">首页</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="search_import_content">请输入你要搜索的内容</string>
    <string name="sourch_history">历史搜索</string>
    <string name="sourch_cancel_history">清空</string>
    <string name="restoration">色彩还原</string>
    <string name="restoration_two">水下色彩一键还原</string>
    <string name="add_log">添加日志</string>
    <string name="dive_data">潜水数据</string>
    <string name="dive_data_cishu">潜水次数</string>
    <string name="min_temperature">最低温度</string>
    <string name="mean_depth">平均深度</string>
    <string name="mean_temperature">平均温度</string>
    <string name="dive_time">潜水时间</string>
    <string name="selector_time">时间选择</string>
    <string name="dive_site">潜水地点</string>
    <string name="dive_idea">想法</string>
    <string name="idea_hint">关于这次潜水的回忆，点击添加......</string>
    <string name="upload_photos">上传照片</string>
    <string name="tv_attention">只支持.jpg格式</string>
    <string name="qiping_xiaohao">气瓶消耗</string>
    <string name="weight">配重</string>
    <string name="environment">环境</string>
    <string name="enter_h2o">入水方式</string>
    <string name="scenery">景物</string>
    <string name="weather">天气</string>
    <string name="flow">水流</string>
    <string name="can_seeing">能见度</string>
    <string name="zoo">动物</string>
    <string name="save">保存</string>
    <string name="max_depth">最大深度</string>
    <string name="photo">照片</string>
</resources>
