<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context=".activity.VerificationLoginActivity">
    <TextView
        android:layout_marginTop="@dimen/dp_68"
        android:layout_marginLeft="@dimen/dp_35"
        android:id="@+id/tv_loginString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_30"
        android:text="@string/login"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginLeft="@dimen/dp_70"
        android:id="@+id/tv_uanmeloginString"
        android:layout_below="@+id/tv_loginString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unameLogin"
        android:textColor="@color/VerificationLogin"
        android:textSize="@dimen/sp_14"
        />
    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:id="@+id/iv_line"
        android:layout_below="@id/tv_uanmeloginString"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_weight="1"
            android:background="@color/hint"
            android:layout_below="@id/tv_uanmeloginString"
            android:layout_marginTop="@dimen/dp_13"
            />
        <ImageView
            android:layout_marginTop="@dimen/dp_12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_3"
            android:layout_weight="1"
            android:src="@mipmap/llll"
            android:layout_below="@id/tv_uanmeloginString"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_VerificationCodeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verification"
        android:layout_toRightOf="@id/tv_uanmeloginString"
        android:layout_alignBottom="@id/tv_uanmeloginString"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/VerificationLogin"
        android:layout_marginLeft="@dimen/dp_64"
        />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_31"
        android:layout_below="@id/iv_line"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_button"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44">
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/icon_num"
            />
        <EditText
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:id="@+id/et_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_phone"
            android:textColor="@color/black"
            android:textColorHint="@color/wechatLogin"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltwo"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/ll"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_button"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        >
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/icon_key"
            />
        <EditText
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_15"
            android:id="@+id/et_VerificationCode"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_Verification"
            android:textColor="@color/black"
            android:textColorHint="@color/wechatLogin"
            />
        <TextView
            android:id="@+id/tv_getVerificationCode"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_36"
            android:textSize="@dimen/sp_14"
            android:gravity="center"
            android:background="@drawable/shape_menu_button"
            android:text="@string/register_getcode"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rlone"
        android:layout_marginTop="@dimen/dp_27"
        android:layout_below="@id/lltwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_Login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_76"
            android:src="@mipmap/button"
            />
        <TextView
            android:layout_marginTop="@dimen/dp_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/llthree"
        android:layout_marginTop="@dimen/dp_1"
        android:layout_below="@id/rlone"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Registered"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/white"
            android:text="@string/Register"
            />
        <TextView
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="@dimen/dp_14"
            android:background="@color/hint"
            />
        <TextView
            android:id="@+id/tv_ForgetPassword"
            android:layout_marginLeft="@dimen/dp_30"
            android:textSize="@dimen/sp_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FindPassword"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_below="@id/llthree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_QuickLogin"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuickLogin"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginRight="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_9"
            android:layout_width="60dp"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/hint"
            android:layout_toLeftOf="@id/tv_QuickLogin"
            />
        <TextView
            android:layout_marginLeft="@dimen/dp_14"
            android:layout_marginTop="@dimen/dp_9"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/hint"
            android:layout_toRightOf="@id/tv_QuickLogin"
            />
    </RelativeLayout>
    <ImageView
        android:id="@+id/iv_wechatLogin"
        android:layout_marginTop="@dimen/dp_26"
        android:layout_width="@dimen/dp_34"
        android:layout_height="@dimen/dp_28"
        android:src="@mipmap/icon_wechat"
        android:layout_below="@id/rl"
        android:layout_centerHorizontal="true"

        />
    <TextView
        android:layout_marginTop="@dimen/dp_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wechatLogin"
        android:layout_below="@id/iv_wechatLogin"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_13"
        android:textColor="@color/wechatLogin"
        />
</RelativeLayout>