<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/ll"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_button"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44">

        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/icon_num"
            />
        <EditText
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_phone"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lltwo"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/ll"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_button"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44">
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/icon_key"
            />
        <EditText
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_15"
            android:id="@+id/verifyCode"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:password="true"
            android:hint="@string/et_Verification"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            />
        <TextView
            android:id="@+id/verify"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_36"
            android:textSize="@dimen/sp_14"
            android:gravity="center"
            android:background="@drawable/shape_menu_button"
            android:text="@string/register_getcode"
            />
    </LinearLayout>

</RelativeLayout>