<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#001128"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.FindPasswordActivity">

    <com.example.edive.design.CommonTitle
        android:id="@+id/findpass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:canBack="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/update_back"
                android:layout_width="@dimen/dp_9"
                android:layout_height="@dimen/dp_15"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:src="@mipmap/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/update_paypassword_title"
                android:textColor="#ffffffff"
                android:textSize="18sp" />
        </RelativeLayout>
    </com.example.edive.design.CommonTitle>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"

        android:layout_marginRight="@dimen/dp_10"
        app:cardBackgroundColor="@color/cardview_bg_findpass_0F1F36"
        app:cardCornerRadius="@dimen/sp_5">
        <!--1-->
        <RelativeLayout
            android:layout_width="@dimen/dp_335"
            android:layout_height="@dimen/dp_89">

            <ImageView
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_13"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@mipmap/icon_num" />

            <EditText
                android:id="@+id/updatepay_ed_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_43"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@null"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:hint="@string/updatepay_ed_phone"
                android:textColor="@color/wechatLogin"
                android:textColorHint="@color/wechatLogin"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_44"
                android:background="#001128" />
            <!--2-->
            <ImageView
                android:id="@+id/findpass_getcode_iv"
                android:layout_width="@dimen/dp_15"
                android:layout_height="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_59"
                android:layout_marginBottom="@dimen/dp_14"
                android:src="@mipmap/icon_yz" />

            <EditText
                android:id="@+id/updatepay_ed_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_43"
                android:layout_marginTop="@dimen/dp_60"

                android:background="@null"
                android:hint="@string/register_code"
                android:inputType="phone|number"
                android:lines="1"
                android:maxLines="1"
                android:textColor="@color/wechatLogin"
                android:textColorHint="@color/wechatLogin"
                android:textSize="@dimen/sp_14"
                android:textStyle="normal"
                tools:ignore="Autofill,RtlHardcoded" />

            <TextView
                android:id="@+id/updatepay_btn_getcode"
                android:layout_width="@dimen/dp_104"
                android:layout_height="@dimen/dp_34"
                android:layout_marginLeft="@dimen/dp_237"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@drawable/findpass_getcode_shape_bg"
                android:gravity="center"


                android:text="@string/register_getcode"
                android:textColor="@color/ffffff"
                android:textSize="@dimen/sp_15"
                android:textStyle="normal"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--输入新密码-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"

        android:layout_marginRight="@dimen/dp_9"
        app:cardBackgroundColor="@color/cardview_bg_findpass_0F1F36"
        app:cardCornerRadius="@dimen/sp_5">

        <!--1-->
        <RelativeLayout
            android:layout_width="@dimen/dp_335"
            android:layout_height="@dimen/dp_89" />

        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@mipmap/icon_key" />

        <EditText
            android:id="@+id/updatepay_et_new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_43"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@null"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/findpass_ed_new_pass"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            android:textSize="@dimen/sp_14"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_44"
            android:background="#001128" />
        <!--2-->
        <ImageView
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_59"
            android:layout_marginBottom="@dimen/dp_14"
            android:src="@mipmap/icon_key" />

        <EditText
            android:id="@+id/updatepay_et_ok_new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_43"
            android:layout_marginTop="@dimen/dp_60"
            android:inputType="textPassword"

            android:background="@null"
            android:maxLines="1"
            android:hint="@string/updatepay_et_ok_new_pass"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            android:textSize="@dimen/sp_14"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_44"
            android:background="#001128" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/updatepay_ok_btn"
        android:layout_width="@dimen/dp_305"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_35"
        android:background="@drawable/shape"
        android:text="@string/update_ok_btn"
        android:textColor="@color/ffffff" />

    <!--<TextView-->
    <!--android:id="@+id/updatepay_ok_btn"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginTop="@dimen/dp_28"-->
    <!--android:background="@mipmap/button3"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/update_ok_btn"-->
    <!--android:textColor="@color/ffffff"-->
    <!--/>-->
    <!--手机号-->
</LinearLayout>