<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#001128"
    tools:context=".activity.RegisterActivity">

    -<com.example.edive.design.CommonTitle
    android:layout_height="@dimen/dp_45"
    android:layout_width="match_parent"
    app:canBack="true"
    >
    -<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/register_back"
        android:layout_width="@dimen/dp_9"
        android:layout_height="@dimen/dp_15"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:src="@mipmap/icon_back" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:text="注册账号"
        android:textSize="@dimen/sp_18"
        android:layout_centerHorizontal="true"
        android:textColor="@color/ffffff"/>

</RelativeLayout>
</com.example.edive.design.CommonTitle>
    <!--1-->
    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_below="@id/iv_line"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_button_registerusername"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44"
        tools:ignore="ObsoleteLayoutParam">
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:src="@mipmap/icon_num"
            />
        <EditText
            android:id="@+id/et_phone_emial"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_phone"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            />
    </LinearLayout>

    <!--手机验证-->
    <RelativeLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/iv_line"
        android:layout_width="match_parent"
        android:background="@drawable/shape_login_button_registerusername"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44">

        <ImageView
            android:id="@+id/register_code_iv"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_17"
            android:src="@mipmap/icon_yz"
            />
        <EditText
            android:layout_toRightOf="@id/register_code_iv"
            android:id="@+id/findpass_ed_code"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_Verification"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            />
        <TextView
            android:id="@+id/btn_getcode"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_36"
            android:background="@drawable/register_getcode_shape_btn"
            android:text="@string/register_getcode"
            android:textColor="@color/getCode"
            android:layout_centerVertical="true"
            tools:ignore="RtlHardcoded"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_5"
            />
    </RelativeLayout>
    <!--验证码-->
    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/iv_line"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_button_registerusername"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44">
        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:src="@mipmap/icon_key"
            />
        <EditText
            android:id="@+id/register_et_pass"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/et_password"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            />
    </LinearLayout>
    <!--密码-->
    <LinearLayout
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_below="@id/iv_line"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_login_button_registerusername"
        android:alpha="0.5"
        android:layout_height="@dimen/dp_44">

        <ImageView
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:src="@mipmap/icon_yq"
            />
        <EditText
            android:id="@+id/register_et_uname"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/sp_14"
            android:maxLines="1"
            android:hint="@string/et_invitationcode"
            android:textColor="@color/wechatLogin"
            android:textColorHint="@color/wechatLogin"
            />
    </LinearLayout>

    <!--邀请码-->
    <Button
        android:id="@+id/findpass_ok_btn"
        android:layout_width="@dimen/dp_305"
        android:layout_height="@dimen/dp_44"
        android:background="@drawable/shape"
        android:layout_marginLeft="@dimen/dp_35"
        android:layout_marginRight="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/register_btn"
        android:textColor="@color/ffffff"
        android:layout_gravity="center"
        />
</LinearLayout>